; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfenc.c_put_swf_matrix.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfenc.c_put_swf_matrix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32, i32, i32)* @put_swf_matrix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @put_swf_matrix(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_6__, align 4
  %16 = alloca [256 x i32], align 16
  %17 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %18 = getelementptr inbounds [256 x i32], [256 x i32]* %16, i64 0, i64 0
  %19 = call i32 @init_put_bits(%struct.TYPE_6__* %15, i32* %18, i32 1024)
  %20 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 1, i32 1)
  store i32 1, i32* %17, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @max_nbits(i32* %17, i32 %21)
  %23 = load i32, i32* %12, align 4
  %24 = call i32 @max_nbits(i32* %17, i32 %23)
  %25 = load i32, i32* %17, align 4
  %26 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 5, i32 %25)
  %27 = load i32, i32* %17, align 4
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 %27, i32 %28)
  %30 = load i32, i32* %17, align 4
  %31 = load i32, i32* %12, align 4
  %32 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 %30, i32 %31)
  %33 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 1, i32 1)
  store i32 1, i32* %17, align 4
  %34 = load i32, i32* %11, align 4
  %35 = call i32 @max_nbits(i32* %17, i32 %34)
  %36 = load i32, i32* %10, align 4
  %37 = call i32 @max_nbits(i32* %17, i32 %36)
  %38 = load i32, i32* %17, align 4
  %39 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 5, i32 %38)
  %40 = load i32, i32* %17, align 4
  %41 = load i32, i32* %11, align 4
  %42 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 %40, i32 %41)
  %43 = load i32, i32* %17, align 4
  %44 = load i32, i32* %10, align 4
  %45 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 %43, i32 %44)
  store i32 1, i32* %17, align 4
  %46 = load i32, i32* %13, align 4
  %47 = call i32 @max_nbits(i32* %17, i32 %46)
  %48 = load i32, i32* %14, align 4
  %49 = call i32 @max_nbits(i32* %17, i32 %48)
  %50 = load i32, i32* %17, align 4
  %51 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 5, i32 %50)
  %52 = load i32, i32* %17, align 4
  %53 = load i32, i32* %13, align 4
  %54 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 %52, i32 %53)
  %55 = load i32, i32* %17, align 4
  %56 = load i32, i32* %14, align 4
  %57 = call i32 @put_bits(%struct.TYPE_6__* %15, i32 %55, i32 %56)
  %58 = call i32 @flush_put_bits(%struct.TYPE_6__* %15)
  %59 = load i32*, i32** %8, align 8
  %60 = getelementptr inbounds [256 x i32], [256 x i32]* %16, i64 0, i64 0
  %61 = call i32 @put_bits_ptr(%struct.TYPE_6__* %15)
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  %64 = sub nsw i32 %61, %63
  %65 = call i32 @avio_write(i32* %59, i32* %60, i32 %64)
  ret void
}

declare dso_local i32 @init_put_bits(%struct.TYPE_6__*, i32*, i32) #1

declare dso_local i32 @put_bits(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @max_nbits(i32*, i32) #1

declare dso_local i32 @flush_put_bits(%struct.TYPE_6__*) #1

declare dso_local i32 @avio_write(i32*, i32*, i32) #1

declare dso_local i32 @put_bits_ptr(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
